  execution when an assertion fails
- deseas() function: add the option of saving the X-13ARIMA
  specification created by gretl; add option to specify the
  ARIMA model; document the verbose option
- weekday() and isoweek() functions: generalize to accept
  dates in ISO 8601 "basic" format
- script editor: enhancements for Find/Replace dialog
- R support: enable exchange of matrices in binary format
- Fix bug: crash on trying to stringify() an empty series
- Fix bug: det() should not flag an error when returning NA
- Fix bug: make "set loop_maxiter 0" behave as advertised
- Fix bug: misbehavior when subsampling within a function a
  panel dataset that was subsampled prior to calling the
  function in question
- Fix bug: the 'end' keyword for indexing into matrices
  could fail under certain conditions
- Fix obscure issue: ensure that libR gets a correct value
  for R_HOME when the user has specified the location of
  libR.so as a symlink (probably specific to Linux, and
  confined to the context of gretl's "foreign language=R")
- Fix GUI bug: the option of showing lagged series in a
  selection dialog not always available when it should be
- Fix GUI bug: incorrect behavior of function-call dialog
  when defining a new list
- distribution: remove unused file, addons.txt

2022-02-02 version 2022a
- Copy/Paste of data in the GUI: make this facility more
  visible, and support gdt format in addition to delimited
  text; support Ctrl-C to copy
- Panel data time dimension: add apparatus to specify this
  via the graphical interface
- Packaged panel data files: add more metadata where wanted
- Add a daily data file to the package: bikesharing.gdt
- Ensure the expected round-trip from strptime to strftime
  for underspecified dates such as "1990"
- "set seed" command: allow parameter "auto" to revert to an
  automatic clock-based seed
- "dpanel" command: add facility to "collapse" instruments
  as in David Roodman's xtabond2